--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="col-lg-8 col-lg-offset-2 col-xs-12 text-center">
 
           <h2><span class="ion-minus"></span> Testimonials <span class="ion-minus"></span></h2>
-            <img class="quote" src="images\blockquote-bottom.png " alt="quote">
+            <img class="quote img-responsive" src="images\blockquote-bottom.png" alt="quote">
 
               <div id="slider" class="carousel slide" data-ride="carousel">
 
@@ -34,7 +34,7 @@
                   <div class="carousel-inner">
                     <div class="item active">
                       <div class="col-sm-3">
-                        <img class="staff-image" src="http://via.placeholder.com/350x300">
+                        <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
                       </div>
                       <div class="col-sm-9">
                       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
@@ -44,7 +44,7 @@
 
                       <div class="item">
                         <div class="col-sm-3">
-                          <img class="staff-image" src="http://via.placeholder.com/350x300">
+                          <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
                         </div>
                         <div class="col-sm-9">
                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
@@ -55,7 +55,7 @@
 
                       <div class="item">
                         <div class="col-sm-3">
-                          <img class="staff-image" src="http://via.placeholder.com/350x300">
+                          <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
                         </div>
                         <div class="col-sm-9">
                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
