--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="col-lg-8 col-lg-offset-2 col-xs-12 text-center">
 
           <h2><span class="ion-minus"></span> Testimonials <span class="ion-minus"></span></h2>
-            <img class="quote img-responsive" src="images\blockquote-bottom.png" alt="quote">
+            <img class="quote img-responsive" src="images\blockquote-top.png" alt="quote">
 
               <div id="slider" class="carousel slide" data-ride="carousel">
 
@@ -64,6 +64,7 @@
                       </div>  <!-- carousel-inner -->
 
           </div>  <!-- carousel slide -->
+          <img class="quote img-responsive" src="images\blockquote-bottom.png" alt="quote"
       </div>
     </div>
   </div>
