Coorect divs are now in place

--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
                           <h5>Jane Doe</h5>
                         </div>
+                      </div>
                       </div>  <!-- carousel-inner -->
 
           </div>  <!-- carousel slide -->
-          <img class="quote img-responsive" src="images\blockquote-bottom.png" alt="quote"
+          <img class="quote img-responsive" src="images\blockquote-bottom.png" alt="quote"></img>
       </div>
     </div>
   </div>
 </section>
+</div>
 </body>
