Removed the icon minus from testimonials and pushed slide selector down.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-xs-12 text-center">
 
-          <h2><span class="ion-minus"></span> Testimonials <span class="ion-minus"></span></h2>
+          <h2>Testimonials</h2>
             <img class="quote img-responsive" src="images\blockquote-top.png" alt="quote">
 
               <div id="slider" class="carousel slide" data-ride="carousel">
