--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
 
                   <div class="carousel-inner">
                     <div class="item active">
-                      <div class="col-sm-3">
+                      <div class="col-xs-3">
                         <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
                       </div>
-                      <div class="col-sm-9">
+                      <div class="col-xs-9">
                       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
                         <h5>Jane Doe</h5>
                       </div>
                     </div>
 
                       <div class="item">
-                        <div class="col-sm-3">
+                        <div class="col-xs-3">
                           <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
                         </div>
-                        <div class="col-sm-9">
+                        <div class="col-xs-9">
                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
                           <h5>Jane Doe</h5>
                         </div>
@@ -55,10 +55,10 @@
 
 
                       <div class="item">
-                        <div class="col-sm-3">
+                        <div class="col-xs-3">
                           <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
                         </div>
-                        <div class="col-sm-9">
+                        <div class="col-xs-9">
                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
                           <h5>Jane Doe</h5>
                         </div>
