Text and staff name and position have been added to the slides

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
                         <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
                       </div>
                       <div class="col-xs-9">
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-                      <h4>Jane Doe</h4>
+                      <p>"I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me responsibility of my own team and the output of the department.</p>
+                      <p>My next promotion took me into our Stores department as Stores Manager. The role included an increase in staff responsibility, stock control, and mechanical seal assembly and to make sure customer orders were despatched on time.</p>
+                      <p>In 1995 I was promoted to the IT and Payroll Manager. In 2012 I’m still in the IT Department as IT Manager. My main responsibility is to provide support for our Global ERP Systems and the ongoing development. I also provide support to our IT Director with the day to day running of the IT Department.</p>
+                      <p>During my 30 year career at AESSEAL®  I have been given the opportunity to be the best I can be and to know I have contributed to a successful company. AESSEAL® gave me the opportunity to complete an Open University Course in Management and I’ve had the chance to travel to many of our Global sites and experience different cultures."</p>
+                      <h4>Josie Lewis: IT Manager</h4>
                       </div>
                     </div>
 
@@ -47,8 +50,14 @@
                           <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
                         </div>
                         <div class="col-xs-9">
-                          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-                          <h4>Jane Doe</h4>
+                          <p>I started my apprenticeship in October 2013. In the first year I worked at the AMRC training center learning machining techniques with a day a week at
+                           college doing an engineering BTEC.</p>
+                          <p>After this I began working in the Test house as an Apprentice Test Engineer where I was a member of the Gas Seal Team, lapping, etching, building and testing
+                           Compressor Dry Gas Seals and Universal Dry Gas Seals. During this time I completed a Mechanical Engineering HNC and HND as day release.</p>
+                          <p>In 2017 I joined the customer order design team where I learnt to use solid edge to design seals to suit the customer’s requirements. I then progressed to the gas
+                           seal design team and I am doing a degree partially funded by AESSEAL.</p>
+                          <p>I would recommend the apprentice program to others because there is a lot of opportunities to work within different departments, gain experience and progress through the company.</p>
+                          <h4>Madeleine Kearney: Design Engineer</h4>
                         </div>
                       </div>
 
@@ -58,8 +67,19 @@
                           <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
                         </div>
                         <div class="col-xs-9">
-                          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-                          <h4>Jane Doe</h4>
+                          <p>I joined AESSEAL® in 2013 straight from university as a Business Assurance Officer (HSEQ).
+                          I began with a focus on H&S where AESSEAL® put me through my NEBOSH General Certificate which is an in depth qualification
+                          built as a foundation for Health and Safety Managers. I progressed into Quality and Environmental aspects of the department
+                          completing formal qualifications in both disciplines.</p>
+                          <p>AESSEAL® nurtured my developing management skills over a 12 month period before I was formally appointed as the UK Business
+                           Assurance Manager.</p>
+                            <p>I am now completing a NEBOSH Diploma in my own time, which I will finish this year. This Diploma is an evidence based qualifications
+                             for Health and Safety Managers – which I certainly could not have achieved without the management opportunity that AESSEAL® has given me.</p>
+                            <p>I also get to visit sites across the Global Business carrying out audits, training and implementing ISO systems.
+                            For a large company to trust in a young person to represent the AESSEAL® brand around the Globe is definitely something most other Companies do not offer.
+                            I have only spent a relatively short time with AESSEAL® and the first 4 years of employment have been fast paced, challenging but certainly rewarding and
+                            I look forward to developing my career further within the Company.</p>
+                          <h4>Josh Perry: UK Business Assurance Manager</h4>
                         </div>
                       </div>
                       </div>  <!-- carousel-inner -->
