Adding images to replace the placehoder that were in place

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <div class="carousel-inner">
                     <div class="item active">
                       <div class="col-xs-3">
-                        <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
+                        <img class="staff-image img-responsive" src="images/JOSE_LEWIS_MILLCLOSE_192.jpg">
                       </div>
                       <div class="col-xs-9">
                       <p>"I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me responsibility of my own team and the output of the department.</p>
@@ -47,7 +47,7 @@
 
                       <div class="item">
                         <div class="col-xs-3">
-                          <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
+                          <img class="staff-image img-responsive" src="images/MADELINE_KEARNEY_MILLCLOSE_084.jpg">
                         </div>
                         <div class="col-xs-9">
                           <p>I started my apprenticeship in October 2013. In the first year I worked at the AMRC training center learning machining techniques with a day a week at
@@ -64,7 +64,7 @@
 
                       <div class="item">
                         <div class="col-xs-3">
-                          <img class="staff-image img-responsive" src="http://via.placeholder.com/350x300">
+                          <img class="staff-image img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
                         </div>
                         <div class="col-xs-9">
                           <p>I joined AESSEAL® in 2013 straight from university as a Business Assurance Officer (HSEQ).
