removed quotation marks from the quote as the images are there

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         <img class="staff-image img-responsive" src="images/JOSE_LEWIS_MILLCLOSE_192.jpg">
                       </div>
                       <div class="col-xs-9">
-                      <p>"I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me responsibility of my own team and the output of the department.</p>
+                      <p>I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me responsibility of my own team and the output of the department.</p>
                       <p>My next promotion took me into our Stores department as Stores Manager. The role included an increase in staff responsibility, stock control, and mechanical seal assembly and to make sure customer orders were despatched on time.</p>
                       <p>In 1995 I was promoted to the IT and Payroll Manager. In 2012 I’m still in the IT Department as IT Manager. My main responsibility is to provide support for our Global ERP Systems and the ongoing development. I also provide support to our IT Director with the day to day running of the IT Department.</p>
-                      <p>During my 30 year career at AESSEAL®  I have been given the opportunity to be the best I can be and to know I have contributed to a successful company. AESSEAL® gave me the opportunity to complete an Open University Course in Management and I’ve had the chance to travel to many of our Global sites and experience different cultures."</p>
+                      <p>During my 30 year career at AESSEAL®  I have been given the opportunity to be the best I can be and to know I have contributed to a successful company. AESSEAL® gave me the opportunity to complete an Open University Course in Management and I’ve had the chance to travel to many of our Global sites and experience different cultures.</p>
                       <h4>Josie Lewis: IT Manager</h4>
                       </div>
                     </div>
