updating col rules

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
                   <div class="carousel-inner">
                     <div class="item active">
-                      <div class="col-xs-4">
+                      <div class="col-xs-3">
                         <img class="staff-image img-responsive" src="images/JOSE_LEWIS_MILLCLOSE_192.jpg">
                       </div>
-                      <div class="col-xs-8">
+                      <div class="col-xs-9">
                       <p>I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me responsibility of my own team and the output of the department.</p>
                       <p>My next promotion took me into our Stores department as Stores Manager. The role included an increase in staff responsibility, stock control, and mechanical seal assembly and to make sure customer orders were despatched on time.</p>
                       <h4>Josie Lewis: IT Manager</h4>
@@ -44,24 +44,24 @@
                     </div>
 
                       <div class="item">
-                        <div class="col-xs-4">
+                        <div class="col-xs-3">
                           <img class="staff-image img-responsive" src="images/MADELINE_KEARNEY_MILLCLOSE_084.jpg">
                         </div>
-                        <div class="col-xs-8">
+                        <div class="col-xs-9">
                           <p>I started my apprenticeship in October 2013. In the first year I worked at the AMRC training center learning machining techniques with a day a week at
                            college doing an engineering BTEC.</p>
                           <p>After this I began working in the Test house as an Apprentice Test Engineer where I was a member of the Gas Seal Team, lapping, etching, building and testing
                            Compressor Dry Gas Seals and Universal Dry Gas Seals. During this time I completed a Mechanical Engineering HNC and HND as day release.</p>
-                          <h4>Madeleine Kearney: Design Engineer</h4>
+                          <h>Madeleine Kearney: Design Engineer</h4>
                         </div>
                       </div>
 
 
                       <div class="item">
-                        <div class="col-xs-4">
+                        <div class="col-xs-3">
                           <img class="staff-image img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
                         </div>
-                        <div class="col-xs-8">
+                        <div class="col-xs-9">
                           <p>I joined AESSEAL® in 2013 straight from university as a Business Assurance Officer (HSEQ).
                           I began with a focus on H&S where AESSEAL® put me through my NEBOSH General Certificate which is an in depth qualification
                           built as a foundation for Health and Safety Managers. I progressed into Quality and Environmental aspects of the department
