reapplying the header rule to the staff name and position

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                            college doing an engineering BTEC.</p>
                           <p>After this I began working in the Test house as an Apprentice Test Engineer where I was a member of the Gas Seal Team, lapping, etching, building and testing
                            Compressor Dry Gas Seals and Universal Dry Gas Seals. During this time I completed a Mechanical Engineering HNC and HND as day release.</p>
-                          <h>Madeleine Kearney: Design Engineer</h4>
+                          <h4>Madeleine Kearney: Design Engineer</h4>
                         </div>
                       </div>
 
