Adjusting html to match the styling of aesseal.com

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <div id = "wrap">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 col-xs-12 text-center">
+      <aside class="span3">
+        <h2>Menu block here</h2>
+      </aside>
+      <section id ="main-content" class="span9">
 
           <h2>Testimonials</h2>
             <img class="quote img-responsive" src="images\blockquote-top.png" alt="quote">
