More to manage mobile style

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <div id = "wrap">
   <div class="container">
     <div class="row">
-      <aside class="col-xs-3">
+      <aside class="col-sm-3">
         <h2>Menu block here</h2>
       </aside>
-      <section id ="main-content" class="col-xs-9">
+      <section id ="main-content" class="col-sm-9">
 
           <h2>Testimonials</h2>
             <img class="quote img-responsive" src="images\blockquote-top.png" alt="quote">
