Updated the styling to match aesseal more for showing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,25 @@
   <div class="container">
     <div class="row">
       <aside class="col-sm-3">
-        <h2>Menu block here</h2>
+        <h3>About Us</h3>
+        <ul class="menu nav">
+          <li a href="#">Anti-Corruption Policy</a></li>
+          <li a href="#">Awards</a></li>
+          <li a href="#">CSR</a></li>
+          <li a href="#">Customer Focus</a></li>
+          <li a href="#">Locations</a></li>
+          <li a href="#">Purposes and Values</a></li>
+          <li a href="#">Quality Focus</a></li>
+          <li a href="#">R&D & Investment</a></li>
+        </ul>
+
+        <h3>Carrers</h3>
+        <ul class="menu nav">
+          <li a href="#">Vacancies</a></li>
+          <li a href="#">Apprenticeships</a></li>
+          <li a href="#"> Success Stories</a></li>
+          <li a href="#">A Day in the Life</a></li>
+        </ul>
       </aside>
       <section id ="main-content" class="col-sm-9">
 
