Adding text-center to the class for testimonials styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li a href="#">A Day in the Life</a></li>
         </ul>
       </aside>
-      <section id ="main-content" class="col-sm-9">
+      <section id ="main-content" class="col-sm-9 text-center">
 
           <h2>Testimonials</h2>
             <img class="quote img-responsive" src="images\blockquote-top.png" alt="quote">
