--- a/index.html
+++ b/index.html
@@ -19,25 +19,32 @@
   <div class="container">
     <div class="row">
       <aside class="col-sm-3">
-        <h3>About Us</h3>
-        <ul class="menu nav">
-          <li a href="#">Anti-Corruption Policy</a></li>
-          <li a href="#">Awards</a></li>
-          <li a href="#">CSR</a></li>
-          <li a href="#">Customer Focus</a></li>
-          <li a href="#">Locations</a></li>
-          <li a href="#">Purposes and Values</a></li>
-          <li a href="#">Quality Focus</a></li>
-          <li a href="#">R&D & Investment</a></li>
-        </ul>
-
-        <h3>Carrers</h3>
-        <ul class="menu nav">
-          <li a href="#">Vacancies</a></li>
-          <li a href="#">Apprenticeships</a></li>
-          <li a href="#">Success Stories</a></li>
-          <li a href="#">A Day in the Life</a></li>
-        </ul>
+        <div class="parent-box">
+        <div class="box">
+            <div class="dialog-box">
+                <p>
+                    <a href="#">
+                        Another Success Story
+                    </a>
+                </p>
+                <p>
+                    <span>
+                      Social
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </span>
+                </p>
+            </div>
+            <div class="info">
+                <div style="width:50%;float:left;">
+                    <a href="#">Josh<br>Perry</a>
+                </div>
+                <div>
+                    <img class="staff-image img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
       </aside>
       <section id ="main-content" class="col-sm-9 text-center">
 
