Forgot to push html through

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="#">Josh<br>Perry</a>
                 </div>
                 <div>
-                    <img class="staff-image img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
+                    <img class="staff-image-card img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
                 </div>
             </div>
         </div>
