Cleaned code up so it's clear where divs start and end and no empty ones

--- a/index.html
+++ b/index.html
@@ -20,36 +20,30 @@
     <div class="row">
       <aside class="col-sm-3">
         <div class="parent-box">
-        <div class="box">
+          <div class="box">
             <div class="dialog-box">
+              <p><a href="#">Another Success Story</a></p>
                 <p>
-                    <a href="#">
-                        Another Success Story
-                    </a>
-                </p>
-                <p>
-                    <span>
-                      Social
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </span>
+                  <span>
+                    Social
+                      <i class="fa fa-facebook" aria-hidden="true"></i>
+                      <i class="fa fa-twitter" aria-hidden="true"></i>
+                  </span>
                 </p>
             </div>
             <div class="info">
-                <div style="width:50%;float:left;">
-                    <a href="#">Josh<br>Perry</a>
-                </div>
-                <div>
-                    <img class="staff-image-card img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
-                </div>
+              <div style="width:50%;float:left;">
+                  <a href="#">Josh<br>Perry</a>
+              </div>
+                <img class="staff-image-card img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg"></img>
             </div>
+          </div>
         </div>
-    </div>
       </aside>
       <section id ="main-content" class="col-sm-9 text-center">
 
           <h2>Testimonials</h2>
-            <img class="quote img-responsive" src="images\blockquote-top.png" alt="quote">
+            <img class="quote img-responsive" src="images\blockquote-top.png" alt="quote"></img>
 
               <div id="slider" class="carousel slide" data-ride="carousel">
 
@@ -99,12 +93,13 @@
                           <h4>Josh Perry: UK Business Assurance Manager</h4>
                         </div>
                       </div>
-                      </div>  <!-- carousel-inner -->
+                    </div>  <!-- carousel-inner -->
 
-          </div>  <!-- carousel slide -->
+              </div>  <!-- carousel slide -->
           <img class="quote img-responsive" src="images\blockquote-bottom.png" alt="quote"></img>
-      </div>
+      </section>
     </div>
   </div>
 </div>
+
 </body>
