--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                         <img class="staff-image img-responsive" src="images/JOSE_LEWIS_MILLCLOSE_192.jpg">
                       </div>
                       <div class="col-xs-9">
-                      <p>I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me responsibility of my own team and the output of the department.</p>
-                      <p>My next promotion took me into our Stores department as Stores Manager. The role included an increase in staff responsibility, stock control, and mechanical seal assembly and to make sure customer orders were despatched on time.</p>
+                      <p>I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me
+                      responsibility of my own team and the output of the department.
+                      My next promotion took me into our Stores department as Stores Manager. The role included an increase in staff responsibility,
+                      stock control, and mechanical seal assembly and to make sure customer orders were despatched on time.</p>
                       <h4>Josie Lewis: IT Manager</h4>
                       </div>
                     </div>
