Adjusting br tags and p tags to match all the same styling

--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
                         </div>
                         <div class="col-xs-9">
                           <p>I started my apprenticeship in October 2013. In the first year I worked at the AMRC training center learning machining techniques with a day a week at
-                           college doing an engineering BTEC.</p>
-                          <p>After this I began working in the Test house as an Apprentice Test Engineer where I was a member of the Gas Seal Team, lapping, etching, building and testing
+                           college doing an engineering BTEC.
+                           <br>
+                          After this I began working in the Test house as an Apprentice Test Engineer where I was a member of the Gas Seal Team, lapping, etching, building and testing
                            Compressor Dry Gas Seals and Universal Dry Gas Seals. During this time I completed a Mechanical Engineering HNC and HND as day release.</p>
                           <h4>Madeleine Kearney: Design Engineer</h4>
                         </div>
@@ -90,9 +91,9 @@
                           <p>I joined AESSEAL® in 2013 straight from university as a Business Assurance Officer (HSEQ).
                           I began with a focus on H&S where AESSEAL® put me through my NEBOSH General Certificate which is an in depth qualification
                           built as a foundation for Health and Safety Managers. I progressed into Quality and Environmental aspects of the department
-                          completing formal qualifications in both disciplines.</p>
-                          <p>AESSEAL® nurtured my developing management skills over a 12 month period before I was formally appointed as the UK Business
-                           Assurance Manager.</p>
+                          completing formal qualifications in both disciplines.<br>
+                          AESSEAL® nurtured my developing management skills over a 12 month period before I was formally appointed as the UK Business
+                          Assurance Manager.</p>
                           <h4>Josh Perry: UK Business Assurance Manager</h4>
                         </div>
                       </div>
