--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                       </div>
                       <div class="col-xs-9">
                       <p>I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me
-                      responsibility of my own team and the output of the department.
-                      <br>
-                      My next promotion took me into our Stores department as Stores Manager. The role included an increase in staff responsibility,
+                      responsibility of my own team and the output of the department.</p>
+
+                      <p>My next promotion took me into our Stores department as Stores Manager. The role included an increase in staff responsibility,
                       stock control, and mechanical seal assembly and to make sure customer orders were despatched on time.</p>
                       <h4>Josie Lewis: IT Manager</h4>
                       </div>
@@ -74,9 +74,9 @@
                         </div>
                         <div class="col-xs-9">
                           <p>I started my apprenticeship in October 2013. In the first year I worked at the AMRC training center learning machining techniques with a day a week at
-                           college doing an engineering BTEC.
-                           <br>
-                          After this I began working in the Test house as an Apprentice Test Engineer where I was a member of the Gas Seal Team, lapping, etching, building and testing
+                           college doing an engineering BTEC.</p>
+
+                          <p>After this I began working in the Test house as an Apprentice Test Engineer where I was a member of the Gas Seal Team, lapping, etching, building and testing
                            Compressor Dry Gas Seals and Universal Dry Gas Seals. During this time I completed a Mechanical Engineering HNC and HND as day release.</p>
                           <h4>Madeleine Kearney: Design Engineer</h4>
                         </div>
@@ -91,8 +91,8 @@
                           <p>I joined AESSEAL® in 2013 straight from university as a Business Assurance Officer (HSEQ).
                           I began with a focus on H&S where AESSEAL® put me through my NEBOSH General Certificate which is an in depth qualification
                           built as a foundation for Health and Safety Managers. I progressed into Quality and Environmental aspects of the department
-                          completing formal qualifications in both disciplines.<br> &nbsp; 
-                          AESSEAL® nurtured my developing management skills over a 12 month period before I was formally appointed as the UK Business
+                          completing formal qualifications in both disciplines.</p>
+                          <p>AESSEAL® nurtured my developing management skills over a 12 month period before I was formally appointed as the UK Business
                           Assurance Manager.</p>
                           <h4>Josh Perry: UK Business Assurance Manager</h4>
                         </div>
