reset css and html to one quote styling and adjusted quote styling to repsoition quotes better

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <img class="staff-image img-responsive" src="images/JOSE_LEWIS_MILLCLOSE_192.jpg">
                       </div>
                       <div class="col-xs-9">
-                        <div class="quote-1">
+                        <div class="quote">
                           <p>I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me
                              responsibility of my own team and the output of the department.</p>
 
@@ -74,7 +74,7 @@
                           <img class="staff-image img-responsive" src="images/MADELINE_KEARNEY_MILLCLOSE_084.jpg">
                         </div>
                         <div class="col-xs-9">
-                          <div class="quote-2">
+                          <div class="quote">
                             <p>I started my apprenticeship in October 2013. In the first year I worked at the AMRC training center learning machining techniques with a day a week at
                                college doing an engineering BTEC.</p>
 
@@ -91,7 +91,7 @@
                           <img class="staff-image img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
                         </div>
                         <div class="col-xs-9">
-                          <div class="quote-3">
+                          <div class="quote">
                             <p>I joined AESSEAL® in 2013 straight from university as a Business Assurance Officer (HSEQ).
                                I began with a focus on H&S where AESSEAL® put me through my NEBOSH General Certificate which is an in depth qualification
                                built as a foundation for Health and Safety Managers. I progressed into Quality and Environmental aspects of the department
