Adjusting html to use line-break instead of p tag to try and even the slide selector out

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             <p>I joined AESSEAL® in 2013 straight from university as a Business Assurance Officer (HSEQ).
                                I began with a focus on H&S where AESSEAL® put me through my NEBOSH General Certificate which is an in depth qualification
                                built as a foundation for Health and Safety Managers. I progressed into Quality and Environmental aspects of the department
-                               completing formal qualifications in both disciplines.</p>
-                            <p>AESSEAL® nurtured my developing management skills over a 12 month period before I was formally appointed as the UK Business
+                               completing formal qualifications in both disciplines.<br>
+                               AESSEAL® nurtured my developing management skills over a 12 month period before I was formally appointed as the UK Business
                                Assurance Manager.</p>
                             <h4>Josh Perry: UK Business Assurance Manager</h4>
                         </div>
