Styling adjustments for the image to be adaptive and responsive will keeping a good shape

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 </p>
             </div>
             <div class="info">
-              <div style="width:50%;float:left;">
+              <div style="width:70%;float:left;">
                   <a href="#">Josh<br>Perry</a>
               </div>
-                <img class="staff-image-card img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg"></img>
+                <img class="staff-image-card img-adaptive img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg"></img>
             </div>
           </div>
         </div>
