--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
 <div id = "wrap">
+  <div class="main-container">
     <div class="row">
       <aside class="col-sm-3">
         <div class="parent-box">
