Adding img-adaptive to the testimonials images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <div class="carousel-inner">
                     <div class="item active">
                       <div class="col-xs-3">
-                        <img class="staff-image img-responsive" src="images/JOSE_LEWIS_MILLCLOSE_192.jpg">
+                        <img class="staff-image img-responsive img-adaptive" src="images/JOSE_LEWIS_MILLCLOSE_192.jpg">
                       </div>
                       <div class="col-xs-9">
                         <div class="quote">
@@ -64,7 +64,7 @@
 
                       <div class="item">
                         <div class="col-xs-3">
-                          <img class="staff-image img-responsive" src="images/MADELINE_KEARNEY_MILLCLOSE_084.jpg">
+                          <img class="staff-image img-responsive img-adaptive" src="images/MADELINE_KEARNEY_MILLCLOSE_084.jpg">
                         </div>
                         <div class="col-xs-9">
                           <div class="quote">
@@ -81,7 +81,7 @@
 
                       <div class="item">
                         <div class="col-xs-3">
-                          <img class="staff-image img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
+                          <img class="staff-image img-responsive img-adaptive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
                         </div>
                         <div class="col-xs-9">
                           <div class="quote">
