--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <div style="width:70%;float:left;">
                   <a href="#">Josh<br>Perry</a>
               </div>
-                <img class="staff-image-card img-adaptive img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg"></img>
+                <img class="staff-image-card img-responsive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg"></img>
             </div>
           </div>
         </div>
