--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
   <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://maxcdn.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css" />
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="quoteslide.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 <div id = "wrap">
   <div class="main-container content-wrapper">
     <div class="row">
-      <aside class="span3">
+      <aside class="col-sm-3">
         <div class="parent-box">
           <div class="box">
             <div class="dialog-box">
@@ -33,7 +33,7 @@
           </div>
         </div>
       </aside>
-      <section id ="main-content" class="span9 text-center">
+      <section id ="main-content" class="col-sm-9 text-center">
 
           <h2>Testimonials</h2>
 
@@ -47,10 +47,10 @@
 
                   <div class="carousel-inner">
                     <div class="item active">
-                      <div class="span3">
+                      <div class="col-xs-3">
                         <img class="staff-image img-responsive img-adaptive" src="images/JOSE_LEWIS_MILLCLOSE_192.jpg">
                       </div>
-                      <div class="span9">
+                      <div class="col-xs-9">
                         <div class="quote">
                           <p>I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me
                              responsibility of my own team and the output of the department.</p>
@@ -62,10 +62,10 @@
                     </div>
 
                       <div class="item">
-                        <div class="span3">
+                        <div class="col-xs-3">
                           <img class="staff-image img-responsive img-adaptive" src="images/MADELINE_KEARNEY_MILLCLOSE_084.jpg">
                         </div>
-                        <div class="span9">
+                        <div class="col-xs-9">
                           <div class="quote">
                             <p>I started my apprenticeship in October 2013. In the first year I worked at the AMRC training center learning machining techniques with a day a week at
                                college doing an engineering BTEC.</p>
@@ -77,10 +77,10 @@
                       </div>
 
                       <div class="item">
-                        <div class="span3">
+                        <div class="col-xs-3">
                           <img class="staff-image img-responsive img-adaptive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
                         </div>
-                        <div class="span9">
+                        <div class="col-xs-9">
                           <div class="quote">
                             <p>I joined AESSEAL® in 2013 straight from university as a Business Assurance Officer (HSEQ).
                                I began with a focus on H&S where AESSEAL® put me through my NEBOSH General Certificate which is an in depth qualification
